[tool.poetry]
name = "selenium-bot"
version = "0.1.0"
description = ""
authors = ["Selenium <--@--.-->"]

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg = "^1.4"
flask = "^1.1.2"
fuzzywuzzy = "^0.18.0"
mcipc = "^1.4.5"
pytube = "^10.0.0"
youtube-dl = "^2020.11.26"
discord-py = "^1.5.1"
python-Levenshtein = "^0.12.0"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
